--- a/server/app/views/login1.scala.html
+++ b/server/app/views/login1.scala.html
@@ -4,9 +4,19 @@
 @main("Login") {
     <h2>Login</h2>
 
-    <form method="get" actions="validateLogin1">
+    <form method="get" action="/validateGet1">
         Username: <input type="text" name="username"></input>
+        <br>
         Password: <input type="password" name="password"></input>
+        <br>
+        <input type="submit"></input>
+    </form>
+
+    <form method="post" action="@routes.TaskList1.validateLoginPost()">
+        Username: <input type="text" name="username"></input>
+        <br>
+        Password: <input type="password" name="password"></input>
+        <br>
         <input type="submit"></input>
     </form>
 }
