--- a/server/app/views/login1.scala.html
+++ b/server/app/views/login1.scala.html
@@ -1,5 +1,5 @@
 @* login1 Template File *@
-@()
+@(loginForm: Form[LoginData])(implicit request: RequestHeader, flash: Flash)
 
 @main("Login") {
     <h2>Login</h2>
@@ -15,6 +15,7 @@
     </form>
 
     <form method="post" action="@routes.TaskList1.validateLoginPost()">
+        @helper.CSRF.formField 
         <h3>Login with POST</h3>
         <br>
         Username: <input type="text" name="username"></input>
@@ -24,7 +25,17 @@
         <input type="submit"></input>
     </form>
 
+    @helper.form(action = routes.TaskList1.validateLoginForm()) {
+        @helper.CSRF.formField
+        @helper.inputText(loginForm("Username"))
+        @helper.inputText(loginForm("Password"))
+        <div class="form-actions">
+            <button type="submit">Login</button>
+        </div>
+    }
+
     <form method="post" action="@routes.TaskList1.createUser()">
+        @helper.CSRF.formField 
         <h3>Create User</h3>
         <br>
         Username: <input type="text" name="username"></input>
