--- a/server/app/views/login1.scala.html
+++ b/server/app/views/login1.scala.html
@@ -1,5 +1,5 @@
 @* login1 Template File *@
-@(loginForm: Form[LoginData])(implicit request: RequestHeader, flash: Flash)
+@(loginForm: Form[LoginData])(implicit request: MessagesRequestHeader, flash: Flash)
 
 @main("Login") {
     <h2>Login</h2>
