--- a/server/app/views/taskList1.scala.html
+++ b/server/app/views/taskList1.scala.html
@@ -15,13 +15,13 @@
         }
     </ul>
 
-    <form method="post" action="@routes.TaskList1.addTask()"> 
+    <form method="post" action="@routes.TaskList1.addTask"> 
         @helper.CSRF.formField
         <input type="text" name="newTask"></input>
         <input type="submit"></input>
     </form>
 
     <div>
-        <a href="@routes.TaskList1.logout()">Logout</a>
+        <a href="@routes.TaskList1.logout">Logout</a>
     </div>
 }
