--- a/server/app/views/version3Main.scala.html
+++ b/server/app/views/version3Main.scala.html
@@ -34,6 +34,7 @@
 
     <input type="hidden" id="csrfToken" value="@helper.CSRF.getToken.value">
     <input type="hidden" id="validateRoute" value="@routes.TaskList3.validate()">
+    <input type="hidden" id="tasksRoute" value="@routes.TaskList3.taskList()">
     <input type="hidden" id="createRoute" value="@routes.TaskList2.createUser()">
     <input type="hidden" id="deleteRoute" value="@routes.TaskList2.delete()">
     <input type="hidden" id="addRoute" value="@routes.TaskList2.addTask()">
