--- a/server/app/views/version3Main.scala.html
+++ b/server/app/views/version3Main.scala.html
@@ -1,5 +1,5 @@
 @* version3Main Template File *@
-@() (implicit request: RequestHeader, flash: Flash)
+@()(implicit request: RequestHeader, flash: Flash)
 
 @main("Task List (Version 3)") {
     <div id="contents">Version 3</div>
@@ -17,7 +17,7 @@
         <br>
         Username: <input type="text" id="createName">
         <br>
-        Password: <input type="password" id="creatPass">
+        Password: <input type="password" id="createPass">
         <br>
         <button onclick="createUser()">Create User</button>
     </div>
@@ -26,19 +26,24 @@
         <h2>Task List</h2>
 
         <ul id="task-list">
-
         </ul>
 
         <input type="text" id="newTask"></input>
+        <button onclick="addTask()">Add Task</button>
+
+        <div>
+            <button onclick="logout()">Logout</button>
+        </div>
     </div>
 
     <input type="hidden" id="csrfToken" value="@helper.CSRF.getToken.value">
     <input type="hidden" id="validateRoute" value="@routes.TaskList3.validate()">
     <input type="hidden" id="tasksRoute" value="@routes.TaskList3.taskList()">
-    <input type="hidden" id="createRoute" value="@routes.TaskList2.createUser()">
-    <input type="hidden" id="deleteRoute" value="@routes.TaskList2.delete()">
-    <input type="hidden" id="addRoute" value="@routes.TaskList2.addTask()">
+    <input type="hidden" id="createRoute" value="@routes.TaskList3.createUser()">
+    <input type="hidden" id="deleteRoute" value="@routes.TaskList3.delete()">
+    <input type="hidden" id="addRoute" value="@routes.TaskList3.addTask()">
+    <input type="hidden" id="logoutRoute" value="@routes.TaskList3.logout()">
 
-    <script src="@routes.Assets.versioned("javascript/version2.js")"></script>
+    <script src="@routes.Assets.versioned("javascript/version3.js")"></script>
 
 }
