Error Fixed. Functionality needs work

--- a/server/app/views/version3Main.scala.html
+++ b/server/app/views/version3Main.scala.html
@@ -37,12 +37,12 @@
     </div>
 
     <input type="hidden" id="csrfToken" value="@helper.CSRF.getToken.value">
-    <input type="hidden" id="validateRoute" value="@routes.TaskList3.validate()">
-    <input type="hidden" id="tasksRoute" value="@routes.TaskList3.taskList()">
-    <input type="hidden" id="createRoute" value="@routes.TaskList3.createUser()">
-    <input type="hidden" id="deleteRoute" value="@routes.TaskList3.delete()">
-    <input type="hidden" id="addRoute" value="@routes.TaskList3.addTask()">
-    <input type="hidden" id="logoutRoute" value="@routes.TaskList3.logout()">
+    <input type="hidden" id="validateRoute" value="@routes.TaskList3.validate">
+    <input type="hidden" id="tasksRoute" value="@routes.TaskList3.taskList">
+    <input type="hidden" id="createRoute" value="@routes.TaskList3.createUser">
+    <input type="hidden" id="deleteRoute" value="@routes.TaskList3.delete">
+    <input type="hidden" id="addRoute" value="@routes.TaskList3.addTask">
+    <input type="hidden" id="logoutRoute" value="@routes.TaskList3.logout">
 
     <script src="@routes.Assets.versioned("javascript/version3.js")"></script>
 
