--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
+    <div id="root"></div>
+    <canvas id="canvas" width="800" height="600"></canvas>
+
     <!-- Libraries for React -->
     <script src="https://unpkg.com/react@@16/umd/react.development.js" crossorigin></script> 
     <script src="https://unpkg.com/react-dom@@16/umd/react-dom.development.js" crossorigin></script> 
@@ -16,6 +19,6 @@
     @flash.get("error")
     @flash.get("success")
     @content
-    @*@scalajs.html.scripts("play-client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)*@
+    @scalajs.html.scripts("play-client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
   </body>
 </html>
