Task 9 In Progress. Changed tables

--- a/server/app/views/version5Main.scala.html
+++ b/server/app/views/version5Main.scala.html
@@ -1,4 +1,4 @@
-@* @()(implicit request: RequestHeader, flash: Flash)
+@()(implicit request: RequestHeader, flash: Flash)
 
 @main("Task List 5"){
     
@@ -13,5 +13,5 @@
     <div id="react-root"></div>
     <script src="@routes.Assets.versioned("javascript/version5.js")"></script>
 
-} *@
+} 
 
