Made task 11 an object

--- a/server/app/views/DrawingPage.scala.html
+++ b/server/app/views/DrawingPage.scala.html
@@ -3,5 +3,6 @@
 @main("Drawing Page") {
     <h1> Draw Something! </h1>
     <canvas id="canvas2" width="800" height="600" tabindex="1"></canvas>
+    <input type="hidden" id="task11" value="">
    
 }
