--- a/server/app/views/task10.scala.html
+++ b/server/app/views/task10.scala.html
@@ -3,4 +3,5 @@
 @main("Task 10") {
     <h1> Drone Racer </h1>
     <canvas id="canvas" width="800" height="600"></canvas>
+    <input type="hidden" id="task10" value="">
 }
